Introduce components events